[gd_scene load_steps=10 format=2]

[ext_resource path="res://font/PixelFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/animatedButton.gd" type="Script" id=2]
[ext_resource path="res://animations/idle.tres.anim" type="Animation" id=3]
[ext_resource path="res://animations/scale.tres.anim" type="Animation" id=4]
[ext_resource path="res://animations/unScale.tres.anim" type="Animation" id=5]

[sub_resource type="DynamicFont" id=1]

size = 24
use_mipmaps = false
use_filter = true
font_data = ExtResource( 1 )
_sections_unfolded = [ "Settings" ]

[sub_resource type="Animation" id=2]

length = 4.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -2.0, 0.0, 2.0 ]
}

[sub_resource type="Animation" id=3]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ) ]
}

[sub_resource type="Animation" id=4]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[node name="Button" type="Button" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_right = -576.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 32, 32 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
script = ExtResource( 2 )
_sections_unfolded = [ "Material", "Rect", "custom_fonts", "custom_styles" ]
toLeft = null
speed = 1

[node name="idleAnim" type="AnimationPlayer" parent="." index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/idle = ExtResource( 3 )
anims/scale = ExtResource( 4 )
anims/unScale = ExtResource( 5 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="zoomAnim" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/idle = SubResource( 2 )
anims/scale = SubResource( 3 )
anims/unScale = SubResource( 4 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]

[connection signal="mouse_exited" from="." to="." method="_on_Button_mouse_exited"]


